[project]
name = "mac-time-converter"
version = "0.1.0"
description = ""
authors = [{ name = "Kennedy Mindeman", email = "kennedymindeman@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click>=8.0", "python-dateutil>=2.8"]

[tool.poetry]
packages = [{ include = "mac_time_converter", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
mac-time = "mac_time_converter.cli:cli"
